minor cleanup, made compatible with java 8+ (instead of 14), added additional test